# bank_ecommerce_14_2

./: .gitignore  README.md  main.py  pyproject.toml
src/: category.py  product.py
tests/: test_category.py  test_product.py
