[project]
name = "bank-ecommerce-14-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Schischkin",email = "schischkin2@yandex.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
  \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]